update the KV in the wide flat mobile RWD size layout to prevent layout shifts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2043,17 +2043,18 @@ section#good_employers {
 
 @media (max-width: 1919px) {
   .kv_title_bg {
-    height: 120vh;
-    top: -20%;
-    left: -4%;
+    height: 110vh;
+    top: -16%;
+    left: 51%;
   }
 }
 
 @media (max-width: 1024px) {
   .kv_title_bg {
-    height: 110vh;
-    top: -20%;
-    left: -12%;
+    height: 120vh;
+    top: -4%;
+    left: -4%;
+    transform: rotate(-28deg);
   }
 }
 
@@ -2062,27 +2063,25 @@ section#good_employers {
     height: 111vh;
     top: -20%;
     left: -11%;
+    transform: rotate(-6deg);
   }
 }
 
 
 
 @media (max-width: 769px) {
-  .kv_title_area {
-    /* top:-100px; */
-  }
-
   .kv_title {
-    width: 1280px;
+    width: 1024px;
     height: auto;
     position: absolute;
+    top: 15vh;
   }
 
   .kv_title_bg {
     height: 110vh;
     top: -4%;
     left: 6%;
-    transform: rotate(-7deg);
+    transform: rotate(-12deg);
   }
 }
 
@@ -2096,8 +2095,8 @@ section#good_employers {
 
   .kv_title {
     width: 1024px;
+    top: 20vh;
   }
-
 }
 
 
@@ -2105,14 +2104,10 @@ section#good_employers {
 @media (max-width: 576px) {
   .kv_title_bg {
     height: 90vh;
-    top: 16%;
+    top: 24%;
     left: -6%;
     transform: rotate(-8deg);
   }
-
-  /* .kv_title {
-    width: 1024px;
-  } */
 }
 
 @media (max-width: 414px) {
@@ -2129,13 +2124,6 @@ section#good_employers {
 
 
 img.role_all {
-  /* width: 100%;
-  height: auto;
-  min-width: 64vh;
-  position: absolute;
-  bottom: 0;
-  z-index: 2;
-  display: inline-block; */
   width: auto;
   height: 100%;
   max-height: 62vh;
@@ -2161,9 +2149,18 @@ img.role_all_mobile {
   img.role_all {
     width: auto;
     height: 100%;
-    max-height: 60vh;
+    max-height: 55vh;
   }
 
+}
+
+@media (max-width: 1480px) {
+
+  img.role_all {
+    height: auto;
+    max-height: 50vh;
+    max-width: 100%;
+  }
 }
 
 
@@ -2171,10 +2168,9 @@ img.role_all_mobile {
 
   img.role_all {
     height: auto;
-    max-height: 55vh;
+    max-height: 45vh;
     max-width: 100%;
   }
-
 }
 
 .p-hero .swiper {
@@ -2263,7 +2259,7 @@ img.role_all_mobile {
 @media (max-width: 960px) {
   img.role_all {
     height: auto;
-    max-height: 50vh;
+    max-height: 48vh;
     max-width: 100%;
   }
 }
@@ -2297,10 +2293,18 @@ img.role_all_mobile {
 
   img.role_all_mobile {
     display: inline-block;
-    max-height: 30vh;
+    max-height: 40vh;
   }
 }
 
+@media (max-width: 375px) {
+  img.role_all_mobile {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    max-height: 40vh;
+  }
+}
 
 
 .p-benefits__wrapper {
